# questionnaire_backend_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  sqlite.db
example/: Script.sql
macros/: Cargo.toml
macros/src/: lib.rs
sqlite-scripts/: create-tables.sql  example.sql
src/: auth.rs  main.rs  model.rs  service.rs
src/migrator/: m20230312_000001_create_answer_table.rs  m20230312_000001_create_questionnaire_table.rs  m20230312_000002_create_question_table.rs  m20230312_000003_create_answer_table.rs  m20230312_000003_create_questionnaire_table.rs  mod.rs
src/model/: answer.rs  prelude.rs  question.rs  questionnaire.rs  questions_answers.rs  traits.rs
src/repository/: question.rs
src/service/: database.rs  question.rs  questionnaire.rs  questionnaires.rs  questions_answers.rs  routes.rs
