[package]
name = "questionnaire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros" }
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "sqlite" ] }
env_logger = "0.10"
log = "0.4"
actix-web-httpauth = "0.8.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.16", features = ["json"] }
dotenv = "0.15.0"